--- a/views/orders/index.ejs
+++ b/views/orders/index.ejs
@@ -5,15 +5,37 @@
         <% orders.forEach(function(order){ %>
             <div class="order-container">
                 <div class="customer-row">
-                    <div class="customer-info delivery-time">
+                    <div class="customer-info col-md-3">
+                        <!-- <p><%= order.deliveryTime %></p> -->
+                        <p><strong>Order Placed</strong></p>
+                    </div>
+                    <div class="customer-info col-md-2">
+                        <p><strong>Customer Name</strong></p>
+                    </div>
+                    <div class="customer-info col-md-2">
+                        <p><strong>Customer Contact</strong></p>
+                    </div>
+                    <div class="customer-info col-md-2">
+                        <p><strong>Payment Method</strong></p>
+                    </div>
+                    <div class="customer-info col-md-3">
+                        <p><strong>Order Number</strong></p>
+                    </div>
+                    <div class="customer-info col-md-3">
                         <!-- <p><%= order.deliveryTime %></p> -->
                         <p>March 17th 2018, 1:11:26 pm</p>
                     </div>
-                    <div class="customer-info customer-name">
+                    <div class="customer-info col-md-2">
                         <p><%= order.name %></p>
                     </div>
-                    <div class="customer-info customer-phone">
+                    <div class="customer-info col-md-2">
                         <p><%= order.phone %></p>
+                    </div>
+                    <div class="customer-info col-md-2" style="text-transform: capitalize">
+                        <p><%= order.payment %></p>
+                    </div>
+                    <div class="customer-info col-md-3">
+                        <p><%= order._id %></p>
                     </div>
                 </div>
                     <% for(var id in order.cart.items){ %>
